--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@prismicio/client": "^7.21.3",
     "@prismicio/next": "^2.2.0",
     "@prismicio/react": "^3.3.0",
