--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prismicio/client": "^7.21.3",
     "@prismicio/next": "^2.2.1",
     "@prismicio/react": "^3.3.0",
+    "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.14.2",
     "next": "16.1.3",
     "react": "19.2.3",
