--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@prismicio/next": "^2.2.1",
     "@prismicio/react": "^3.3.0",
     "@studio-freight/lenis": "^1.0.42",
+    "embla-carousel-react": "^8.6.0",
     "gsap": "^3.14.2",
+    "lucide-react": "^0.563.0",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.9.1",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
